--- a/static/style.css
+++ b/static/style.css
@@ -1,7 +1,8 @@
 body {
-    /*font-family: 'Open Sans', sans-serif;*/
-	font-family: 'Helvetica Neue', sans-serif;
+    font-family: 'Open Sans', sans-serif;
+	/*font-family: 'Helvetica Neue', sans-serif;*/
     /*background-color: #FFFCF9;*/
+    /*background-color: #4DA1A9;*/
     color: #2C8C99;
     text-align: center;
 }
@@ -16,9 +17,29 @@ h2,h1 {
 }
 
 p {
-    color: #EF476F;
-    font-weight: 100;
+    /*color: #EF476F;*/
+    color: #FFA630;
+    font-weight: 400;
     letter-spacing: 2px;
+}
+
+.folio-desc {
+    text-align: center;
+    width:240px;
+    height: 240px;
+    margin-right: auto;
+    margin-left: auto;
+}
+
+.folio-text {
+    text-align: left;
+    color:#424242;
+    letter-spacing: 0;
+}
+
+.folio-title {
+    letter-spacing: 1px;
+    font-weight:900; 
 }
 
 .header {
@@ -62,7 +83,7 @@ a:active {
     }
 }
 
-.portfolio {
+.folio {
     margin-top: 30px;
 }
 
@@ -72,11 +93,11 @@ a:active {
     /*padding:2px 0px;*/
 }
 
-.portfolio-item {
+.folio-item {
     width:240px;
-    border-top: 10px solid #424242;
+    border-top:   10px solid #424242;
     border-bottom: 2px solid #424242;
-    border-left: 2px solid #424242;
-    border-right: 2px solid #424242;
+    border-left:   2px solid #424242;
+    border-right:  2px solid #424242;
     border-radius: 2px;
 }
