portfolio description work

--- a/static/style.css
+++ b/static/style.css
@@ -18,29 +18,11 @@ h2,h1 {
 
 p {
     /*color: #EF476F;*/
-    color: #FFA630;
-    font-weight: 400;
-    letter-spacing: 2px;
+    /*color: #FFA630;*/
+    /*font-weight: 400;*/
+    /*letter-spacing: 2px;*/
 }
 
-.folio-desc {
-    text-align: center;
-    width:240px;
-    height: 240px;
-    margin-right: auto;
-    margin-left: auto;
-}
-
-.folio-text {
-    text-align: left;
-    color:#424242;
-    letter-spacing: 0;
-}
-
-.folio-title {
-    letter-spacing: 1px;
-    font-weight:900; 
-}
 
 .header {
     margin-top: 50px;
@@ -83,21 +65,63 @@ a:active {
     }
 }
 
-.folio {
-    margin-top: 30px;
-}
-
 #title {
+    color: #FFA630;
+    font-weight: 400;
+    letter-spacing: 2px;
     /*border-bottom: 1px solid #EF476F;*/
     /*border-radius: 2px;*/
     /*padding:2px 0px;*/
 }
 
+/* parent folio <div> container */
+.folio {
+    margin-top: 30px;
+}
+
+/* <img> */
 .folio-item {
-    width:240px;
+    width:260px;
     border-top:   10px solid #424242;
     border-bottom: 2px solid #424242;
     border-left:   2px solid #424242;
     border-right:  2px solid #424242;
     border-radius: 2px;
 }
+
+/* full descrption <div> */
+.folio-desc {
+    text-align: center;
+    width:260px;
+    height: 140px;
+    margin-right: auto;
+    margin-left: auto;
+    margin-top:10px;
+    line-height: 1.2;
+}
+
+/* main text <p> */
+.folio-text {
+    text-align: left;
+    color:#424242;
+    letter-spacing: 0;
+    /*color:#2C8C99;*/
+    font-size: 80%;
+}
+
+/* title <span> */
+.folio-title {
+    letter-spacing: 1px;
+    font-weight:900;
+    color:#424242;
+}
+
+p {
+    margin-bottom: 8px;
+}
+
+
+
+
+
+
